force-app/main/default/objects/Plot_Exploration__c/Plot_Exploration__c.object-meta.xml
<CustomObject>
    <label>Plot Exploration</label>
    <nameField>
        <label>Plot Exploration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plot Explorations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>