force-app/main/default/objects/Plot_Exploration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plot Explorations</relationshipLabel>
    <relationshipName>Plot_Explorations</relationshipName>
    <type>Lookup</type>
</CustomField>