force-app/main/default/objects/Plot_Exploration__c/fields/Cloned__c.field-meta.xml
<CustomField>
    <fullName>Cloned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloned</label>
    <type>Checkbox</type>
</CustomField>