force-app/main/default/objects/Plot_Exploration__c/fields/External_Calendar_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Calendar_Event_ID__c</fullName>
    <inlineHelpText>This will be used to manage the feature of adding/deleting scheduled visits in Siteuser&apos;s external calendar</inlineHelpText>
    <label>External Calendar Event ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>