force-app/main/default/objects/Plot_Exploration__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>HOUR(TIMEVALUE(Check_Out__c)) - HOUR(TIMEVALUE(Check_In__c))</description>
    <formula>IF((((HOUR(TIMEVALUE(Check_Out__c)) - HOUR(TIMEVALUE(Check_In__c))) * 60 +
(MINUTE(TIMEVALUE(Check_Out__c)) - MINUTE(TIMEVALUE(Check_In__c))))
/60)&lt;0,(((HOUR(TIMEVALUE(Check_Out__c)) - HOUR(TIMEVALUE(Check_In__c))) * 60 +
(MINUTE(TIMEVALUE(Check_Out__c)) - MINUTE(TIMEVALUE(Check_In__c))))
/60)+24,((HOUR(TIMEVALUE(Check_Out__c)) - HOUR(TIMEVALUE(Check_In__c))) * 60 +
(MINUTE(TIMEVALUE(Check_Out__c)) - MINUTE(TIMEVALUE(Check_In__c))))
/60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>((HOUR(TIMEVALUE(Check_Out__c)) - HOUR(TIMEVALUE(Check_In__c))) * 60 + (MINUTE(TIMEVALUE(Check_Out__c)) - MINUTE(TIMEVALUE(Check_In__c))))/60</inlineHelpText>
    <label>Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>