force-app/main/default/objects/Plot_Exploration__c/fields/Plot_Location__c.field-meta.xml
<CustomField>
    <fullName>Plot_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plot Location</label>
    <referenceTo>Plot_Location__c</referenceTo>
    <relationshipLabel>Plot Explorations</relationshipLabel>
    <relationshipName>Plot_Explorations</relationshipName>
    <type>Lookup</type>
</CustomField>