force-app/main/default/objects/Plot_Exploration__c/fields/Plot_Location_Region__c.field-meta.xml
<CustomField>
    <fullName>Plot_Location_Region__c</fullName>
    <formula>Plot_Location__r.Plot_Location_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plot Location Region</label>
    <type>Text</type>
</CustomField>