force-app/main/default/objects/Plot_Exploration__c/fields/Plot_Season__c.field-meta.xml
<CustomField>
    <fullName>Plot_Season__c</fullName>
    <formula>Plot_Location__r.Season__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plot Season</label>
    <type>Text</type>
</CustomField>