force-app/main/default/objects/Plot_Exploration__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>40</length>
    <type>Text</type>
</CustomField>