force-app/main/default/objects/Plot_Exploration__c/fields/SiteUser__c.field-meta.xml
<CustomField>
    <fullName>SiteUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SiteUser</label>
    <referenceTo>SiteUser__c</referenceTo>
    <relationshipLabel>Plot Explorations</relationshipLabel>
    <relationshipName>Plot_Explorations</relationshipName>
    <type>Lookup</type>
</CustomField>