force-app/main/default/objects/Plot_Exploration__c/fields/SiteUser_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>SiteUser_Account_Owner__c</fullName>
    <formula>SiteUser__r.Account_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SiteUser Account Owner</label>
    <type>Text</type>
</CustomField>