force-app/main/default/objects/Plot_Exploration__c/fields/SiteUser_Email__c.field-meta.xml
<CustomField>
    <fullName>SiteUser_Email__c</fullName>
    <formula>SiteUser__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SiteUser Email</label>
    <type>Text</type>
</CustomField>