force-app/main/default/objects/Plot_Exploration__c/fields/SiteUserAccount__c.field-meta.xml
<CustomField>
    <fullName>SiteUserAccount__c</fullName>
    <formula>SiteUser__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SiteUser Account</label>
    <type>Text</type>
</CustomField>