force-app/main/default/objects/Plot_Exploration__c/fields/Time_Range__c.field-meta.xml
<CustomField>
    <fullName>Time_Range__c</fullName>
    <formula>IF(VALUE(MID(TEXT(Check_In__c-(5/24)),12,2))&lt;12,
MID(TEXT(Check_In__c-(5/24)),12,2) + &quot;:&quot; + MID(TEXT(Check_In__c-(5/24)),15,2) + &quot;AM&quot;,
IF(MID(TEXT(Check_In__c-(5/24)),12,2)= &quot;12&quot;,
MID(TEXT(Check_In__c-(5/24)),12,2) + &quot;:&quot; + MID(TEXT(Check_In__c-(5/24)),15,2) + &quot;PM&quot;,
TEXT(VALUE(MID(TEXT(Check_In__c-(5/24)),12,2))-12) + &quot;:&quot; + MID(TEXT(Check_In__c-(5/24)),15,2) + &quot;PM&quot;))
+ &quot;-&quot; + IF(VALUE(MID(TEXT(Check_Out__c-(5/24)),12,2))&lt;12,
MID(TEXT(Check_Out__c-(5/24)),12,2) + &quot;:&quot; + MID(TEXT(Check_Out__c-(5/24)),15,2) + &quot;AM&quot;,
IF(MID(TEXT(Check_Out__c-(5/24)),12,2)= &quot;12&quot;,
MID(TEXT(Check_Out__c-(5/24)),12,2) + &quot;:&quot; + MID(TEXT(Check_Out__c-(5/24)),15,2) + &quot;PM&quot;,
TEXT(VALUE(MID(TEXT(Check_Out__c-(5/24)),12,2))-12) + &quot;:&quot; + MID(TEXT(Check_Out__c-(5/24)),15,2) + &quot;PM&quot;)) + &quot; CST&quot;</formula>
    <label>Time Range</label>
    <type>Text</type>
</CustomField>