force-app/main/default/objects/Plot_Exploration__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Harvest</fullName>
            </value>
            <value>
                <fullName>Insecticide</fullName>
            </value>
            <value>
                <fullName>Herbicide</fullName>
            </value>
            <value>
                <fullName>Fungicide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>