force-app/main/default/objects/Plot_Exploration__c/fields/Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>Visit_Time__c</fullName>
    <formula>IF(VALUE(MID(TEXT(Check_In__c-(5/24)),12,2))&lt;12,
															MID(TEXT(Check_In__c-(5/24)),12,2) + &quot;:&quot; + MID(TEXT(Check_In__c-(5/24)),15,2) + &quot;AM&quot;,
															IF(MID(TEXT(Check_In__c-(5/24)),12,2)= &quot;12&quot;,
															MID(TEXT(Check_In__c-(5/24)),12,2) + &quot;:&quot; + MID(TEXT(Check_In__c-(5/24)),15,2) + &quot;PM&quot;,
																		TEXT(VALUE(MID(TEXT(Check_In__c-(5/24)),12,2))-12) + &quot;:&quot; + MID(TEXT(Check_In__c-(5/24)),15,2) + &quot;PM&quot;))
+ &quot;-&quot; + IF(VALUE(MID(TEXT(Check_Out__c-(5/24)),12,2))&lt;12,
															MID(TEXT(Check_Out__c-(5/24)),12,2) + &quot;:&quot; + MID(TEXT(Check_Out__c-(5/24)),15,2) + &quot;AM&quot;,
															IF(MID(TEXT(Check_Out__c-(5/24)),12,2)= &quot;12&quot;,
															MID(TEXT(Check_Out__c-(5/24)),12,2) + &quot;:&quot; + MID(TEXT(Check_Out__c-(5/24)),15,2) + &quot;PM&quot;,
																		TEXT(VALUE(MID(TEXT(Check_Out__c-(5/24)),12,2))-12) + &quot;:&quot; + MID(TEXT(Check_Out__c-(5/24)),15,2) + &quot;PM&quot;))
																		
															+			TEXT(IF( OR( VALUE( MID( TEXT(Check_In__c-(5/24)), 12, 2 ) ) = 0, VALUE( MID( TEXT( Check_In__c-(5/24)), 12, 2 ) ) = 12 ),
			12, VALUE( MID( TEXT( Check_In__c-(5/24)), 12, 2 ) ) - IF( VALUE( MID( TEXT( Check_In__c-(5/24)), 12, 2 ) ) &lt; 12, 0, 12 ) )) +
&quot;&quot; + IF( VALUE( MID( TEXT(  Check_In__c-(5/24)), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; )
+ &quot;-&quot; +
TEXT(IF( OR( VALUE( MID( TEXT(Check_Out__c-(5/24)), 12, 2 ) ) = 0, VALUE( MID( TEXT( Check_Out__c-(5/24)), 12, 2 ) ) = 12 ),
			12, VALUE( MID( TEXT( Check_Out__c-(5/24)), 12, 2 ) ) - IF( VALUE( MID( TEXT( Check_Out__c-(5/24)), 12, 2 ) ) &lt; 12, 0, 12 ) )) +
&quot;&quot; + IF( VALUE( MID( TEXT(  Check_Out__c-(5/24)), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Time</label>
    <type>Text</type>
</CustomField>