force-app/main/default/objects/Plot_Exploration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plot_Location__c</columns>
    <columns>SiteUser__c</columns>
    <columns>Book_Date__c</columns>
    <columns>Time_Range__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Book_Date__c</field>
        <operation>greaterThan</operation>
        <value>8/1/2020</value>
    </filters>
    <label>All 2020 season</label>
</ListView>