force-app/main/default/objects/Plot_Exploration__c/listViews/All_ACME_explorations.listView-meta.xml
<ListView>
    <fullName>All_ACME_explorations</fullName>
    <columns>NAME</columns>
    <columns>Plot_Location__c</columns>
    <columns>SiteUser__c</columns>
    <columns>Book_Date__c</columns>
    <columns>Time_Range__c</columns>
    <columns>Check_In__c</columns>
    <columns>Check_Out__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active__c</columns>
    <columns>SiteUserAccount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SiteUserAccount__c</field>
        <operation>equals</operation>
        <value>00141000002RjDy</value>
    </filters>
    <label>All ACME explorations</label>
</ListView>