force-app/main/default/objects/Plot_Exploration__c/listViews/GDM_Explore_Scheduled_Visits_MIDSOUTH.listView-meta.xml
<ListView>
    <fullName>GDM_Explore_Scheduled_Visits_MIDSOUTH</fullName>
    <columns>NAME</columns>
    <columns>Plot_Location__c</columns>
    <columns>SiteUser__c</columns>
    <columns>Book_Date__c</columns>
    <columns>Time_Range__c</columns>
    <columns>Check_In__c</columns>
    <columns>Check_Out__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SiteUserAccount__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Plot_Location__c</field>
        <operation>equals</operation>
        <value>MARION,STUTTGART,DE WITT,JONESBORO,CLEVELAND,KEISER</value>
    </filters>
    <label>GDM Explore Scheduled Visits MIDSOUTH</label>
</ListView>